# OpenWakeWordListener

./: README.md  pyproject.toml
src/openwakewordlistener/: __main__.py
