[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "OpenWakeWordListener"
version = "0.0.1"
authors = [
  { name="Erik Berglund", email="erik.berglund@gmail.com" },
]
description = "A wake word detection system for Rhasspy"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "CC BY-SA 4.0"
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/erikjber/OpenWakeWordListener"
Issues = "https://github.com/erikjber/OpenWakeWordListener/issues"